# UserManagmentSystem

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
alembic/: alembic.ini
app/: main.py
infrastracture/: .env  Dockerfile  docker-compose.yml  env.py  requirements.txt
infrastracture/rabbitmq-data/: .erlang.cookie
infrastracture/rabbitmq-data/mnesia/rabbit@47590671a2f8/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
infrastracture/rabbitmq-data/mnesia/rabbit@47590671a2f8/coordination/rabbit@47590671a2f8/: 00000003.wal  meta.dets  names.dets
infrastracture/rabbitmq-data/mnesia/rabbit@47590671a2f8/coordination/rabbit@47590671a2f8/RABBITJ1CCVK8VELPX/: 00000001.segment  config
infrastracture/rabbitmq-data/mnesia/rabbit@47590671a2f8/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: file_summary.ets  msg_store_index.ets
infrastracture/rabbitmq-data/mnesia/rabbit@a68c50b97733/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
infrastracture/rabbitmq-data/mnesia/rabbit@a68c50b97733/coordination/rabbit@a68c50b97733/: 00000009.wal  meta.dets  names.dets
infrastracture/rabbitmq-data/mnesia/rabbit@a68c50b97733/coordination/rabbit@a68c50b97733/RABBITUJOHCNPQ6EKE/: 00000001.segment  config
models/: posts.py  users.py
(+6 files in other folders)
