[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Tamagil <tamagiltamagil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
base = "^0.0.0"
fastapi = "0.110.1"
uvicorn = "0.29.0"
pydantic = ">=1.8.0,<2.0.0"
databases = "0.9.0"
alembic = "*"
sqlalchemy = "*"
psycopg2 = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

